docs/pages/versions/v56.0.0/sdk/video.mdx
---
title: Video (expo-video)
description: A library that provides an API to implement video playback in apps.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-video'
packageName: 'expo-video'
iconUrl: '/static/images/packages/expo-video.png'
platforms: ['android', 'ios', 'web', 'tvos', 'expo-go']
searchRank: 10
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';
import { Collapsible } from '~/ui/components/Collapsible';
import { CODE } from '~/ui/components/Text';

`expo-video` is a cross-platform, performant video component for React Native and Expo with Web support.

## Known issues&ensp;<PlatformTags platforms={['android']} />

When two [`VideoView`](#videoview) components are overlapping and have the [`contentFit`](#contentfit) prop set to [`cover`](#videocontentfit), one of the videos may be displayed out of bounds. This is a [known upstream issue](https://github.com/androidx/media/issues/1107). To work around this issue, use the [`surfaceType`](#surfacetype) prop and set it to [`textureView`](#surfacetype-1).

## Installation

<APIInstallSection />

## Configuration in app config

You can configure `expo-video` using its built-in [config plugin](/config-plugins/introduction/) if you use config plugins in your project ([Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)). The plugin allows you to configure various properties that cannot be set at runtime and require building a new app binary to take effect. If your app does **not** use CNG, then you'll need to manually configure the library.

<ConfigPluginExample>
```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-video",
        {
          "supportsBackgroundPlayback": true,
          "supportsPictureInPicture": true,
          "icons": [
            "./local/assets/heart.png",
            "./local/assets/like.png"
          ]
        }
      ]
    ],
  }
}
```
</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'supportsBackgroundPlayback',
      description:
        'A boolean value to enable background playback support. If `true`, on iOS, the `audio` key is added to the `UIBackgroundModes` array in the **Info.plist** file. If `false`, the key is removed. When `undefined`, the key is not modified. On Android, when `true` adds foreground service permissions and creates a expo-video foreground service in AndroidManifest.xml.',
      default: 'undefined',
    },
    {
      name: 'supportsPictureInPicture',
      description:
        'A boolean value to enable Picture-in-Picture on Android and iOS. If `true`, enables the `android:supportsPictureInPicture` property on Android and adds the `audio` key to the `UIBackgroundModes` array in the **Info.plist** file on iOS. If `false`, the key is removed. When `undefined`, the configuration is not modified.',
      default: 'undefined',
    },
    {
      name: 'icons',
      description:
        'Array of local paths to images files that can be used as custom icons for `pictureInPictureActions` and `nowPlayingActions` on Android. 96x96 all-white png with transparency.',
      default: 'undefined',
    },
  ]}
/>

## Usage

Here's a simple example of a video with a play and pause button.

<SnackInline label='Video' dependencies={['expo-video']}>

```jsx
import { useEvent } from 'expo';
import { useVideoPlayer, VideoView } from 'expo-video';
import { StyleSheet, View, Button } from 'react-native';

const videoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4';

export default function VideoScreen() {
  const player = useVideoPlayer(videoSource, player => {
    player.loop = true;
    player.play();
  });

  const { isPlaying } = useEvent(player, 'playingChange', { isPlaying: player.playing });

  return (
    <View style={styles.contentContainer}>
      <VideoView
        style={styles.video}
        player={player}
        fullscreenOptions={{ enable: true }}
        allowsPictureInPicture
      />
      <View style={styles.controlsContainer}>
        <Button
          title={isPlaying ? 'Pause' : 'Play'}
          onPress={() => {
            if (isPlaying) {
              player.pause();
            } else {
              player.play();
            }
          }}
        />
      </View>
    </View>
  );
}

const styles = StyleSheet.create({
  contentContainer: {
    flex: 1,
    padding: 10,
    alignItems: 'center',
    justifyContent: 'center',
    paddingHorizontal: 50,
  },
  video: {
    width: 350,
    height: 275,
  },
  controlsContainer: {
    padding: 10,
  },
});
```

</SnackInline>

### Receiving events

The changes in properties of the [`VideoPlayer`](#videoplayer) do not update the React state. Therefore, to display the information about the current state of the `VideoPlayer`, it is necessary to listen to the [events](#videoplayerevents) it emits.
The event system is based on the [`EventEmitter`](../sdk/expo/#eventemittertype) class and [hooks](../sdk/expo/#hooks) from the [`expo`](../sdk/expo) package. There are a few ways to listen to events:

#### `useEvent` hook

Creates a listener that will return a stateful value that can be used in a component. It also cleans up automatically when the component unmounts.

```tsx useEvent
import { useEvent } from 'expo';
// ... Other imports, definition of the component, creating the player etc.

const { status, error } = useEvent(player, 'statusChange', { status: player.status });
// Rest of the component...
```

#### `useEventListener` hook

Built around the `Player.addListener` and `Player.removeListener` methods, creates an event listener with automatic cleanup.

```tsx useEventListener
import { useEventListener } from 'expo';
// ...Other imports, definition of the component, creating the player etc.

useEventListener(player, 'statusChange', ({ status, error }) => {
  setPlayerStatus(status);
  setPlayerError(error);
  console.log('Player status changed: ', status);
});
// Rest of the component...
```

#### `Player.addListener` method

Most flexible way to listen to events, but requires manual cleanup and more boilerplate code.

```tsx Player.addListener
// ...Imports, definition of the component, creating the player etc.

useEffect(() => {
  const subscription = player.addListener('statusChange', ({ status, error }) => {
    setPlayerStatus(status);
    setPlayerError(error);
    console.log('Player status changed: ', status);
  });

  return () => {
    subscription.remove();
  };
}, []);
// Rest of the component...
```

### Playing local media from the assets directory

`expo-video` supports playing local media loaded using the `require` function. You can use the result as a source directly, or assign it to the `assetId` parameter of a [`VideoSource`](#videosource) if you also want to configure other properties.

```tsx Playing local media
import { VideoSource } from 'expo-video';

const assetId = require('./assets/bigbuckbunny.mp4');

const videoSource: VideoSource = {
  assetId,
  metadata: {
    title: 'Big Buck Bunny',
    artist: 'The Open Movie Project',
  },
};

const player1 = useVideoPlayer(assetId); // You can use the `asset` directly as a video source
const player2 = useVideoPlayer(videoSource);
```

### Playing media from the media library

`expo-video` supports playing videos picked from user's media library using [`expo-media-library/legacy`](../sdk/media-library-legacy/) or any valid `PHAsset` URI with appropriate permissions.

To play a video from the media library, you should obtain an [`Asset`](../sdk/asset/#asset) object with [`MediaLibrary.getAssetsAsync()`](../sdk/media-library-legacy/#medialibrarygetassetsasyncassetsoptions) and use its [`uri`](../sdk/asset/#uri) property as the [`uri`](#videosource) of the video source.
Before playing, make sure to request the necessary permissions using [`MediaLibrary.requestPermissionsAsync()`](../sdk/media-library-legacy/#medialibraryrequestpermissionsasyncwriteonly-granularpermissions).

On iOS make sure **not** to use the `localUri` property of the asset info, as it does not contain the necessary permissions to read the asset.

```tsx Playing media from media library
import * as MediaLibrary from 'expo-media-library/legacy';
import { VideoSource, useVideoPlayer, VideoView } from 'expo-video';

// ...Definition of the component, creating the player etc.

const loadAssetAndReplace = async () => {
  const { granted } = await MediaLibrary.requestPermissionsAsync(false, ['video']);
  if (!granted) {
    return;
  }

  const pagedAssets = await MediaLibrary.getAssetsAsync({
    mediaType: 'video',
  });

  if (pagedAssets.assets.length > 0) {
    const [asset] = pagedAssets.assets;
    const videoSource: VideoSource = {
      uri: asset.uri,
      metadata: {
        title: asset.filename,
      },
    };

    await player.replaceAsync(videoSource);
    await player.replaceAsync(asset.uri); // Alternatively you can use the asset uri directly
    player.play();
  }
};

// You can now use loadAssetAndReplace to load and play the first video from the media library
```

### Preloading videos

While another video is playing, a video can be loaded before showing it in the view. This allows for quicker transitions between subsequent videos and a better user experience.

To preload a video, you have to create a `VideoPlayer` with a video source. Even when the player is not connected to a `VideoView`, it will fill the buffers. Once it is connected to the `VideoView`, it will be able to start playing without buffering.

In some cases, it is beneficial to preload a video later in the screen lifecycle. In that case, a `VideoPlayer` with a `null` source should be created. To start preloading, replace the player source with a video source using the `replace()` function.

Here is an example of how to preload a video:

<SnackInline label='Preloading videos' dependencies={['expo-video']}>

```tsx
import { useVideoPlayer, VideoView, VideoSource } from 'expo-video';
import { useState, useCallback } from 'react';
import { StyleSheet, Text, TouchableOpacity, View } from 'react-native';

const bigBuckBunnySource: VideoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4';

const elephantsDreamSource: VideoSource =
  'https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4';

export default function PreloadingVideoPlayerScreen() {
  const player1 = useVideoPlayer(bigBuckBunnySource, player => {
    player.play();
  });

  const player2 = useVideoPlayer(elephantsDreamSource, player => {
    player.currentTime = 20;
  });

  const [currentPlayer, setCurrentPlayer] = useState(player1);

  const replacePlayer = useCallback(async () => {
    currentPlayer.pause();
    if (currentPlayer === player1) {
      setCurrentPlayer(player2);
      player1.pause();
      player2.play();
    } else {
      setCurrentPlayer(player1);
      player2.pause();
      player1.play();
    }
  }, [player1, currentPlayer]);

  return (
    <View style={styles.contentContainer}>
      <VideoView player={currentPlayer} style={styles.video} nativeControls={false} />
      <TouchableOpacity style={styles.button} onPress={replacePlayer}>
        <Text style={styles.buttonText}>Replace Player</Text>
      </TouchableOpacity>
    </View>
  );
}

const styles = StyleSheet.create({
  contentContainer: {
    flex: 1,
    padding: 10,
    alignItems: 'center',
    justifyContent: 'center',
    paddingHorizontal: 50,
  },
  button: {
    alignItems: 'center',
    justifyContent: 'center',
    borderRadius: 3,
    paddingVertical: 8,
    paddingHorizontal: 12,
    backgroundColor: '#4630ec',
  },
  buttonText: {
    fontSize: 12,
    fontWeight: 'bold',
    color: '#eeeeee',
    textAlign: 'center',
  },
  video: {
    width: 300,
    height: 168.75,
    marginVertical: 20,
  },
});
```

</SnackInline>

### Using the VideoPlayer directly

In most cases, the [`useVideoPlayer`](#usevideoplayersource-setup-playerbuilderoptions) hook should be used to create a `VideoPlayer` instance. It manages the player's lifecycle and ensures that it is properly disposed of when the component is unmounted. However, in some advanced use cases, it might be necessary to create a `VideoPlayer` that does not get automatically destroyed when the component is unmounted.
In those cases, the `VideoPlayer` can be created using the [`createVideoPlayer`](#videocreatevideoplayersource-playerbuilderoptions) function. You need be aware of the risks that come with this approach, as it is your responsibility to call the [`release()`](../sdk/expo/#release) method when the player is no longer needed. If not handled properly, this approach may lead to memory leaks.

```tsx Creating player instance
import { createVideoPlayer } from 'expo-video';
const player = createVideoPlayer(videoSource);
```

> **warning** On Android, mounting multiple `VideoView` components at the same time with the same `VideoPlayer` instance will not work due to a [platform limitation](https://github.com/expo/expo/issues/35012).

### Caching videos

If your app frequently replays the same video, caching can be utilized to minimize network usage and enhance user experience, albeit at the cost of increased device storage usage. `expo-video` supports video caching on `Android` and `iOS` platforms. This feature can be activated by setting the [`useCaching`](#videosource) property of a [`VideoSource`](#videosource) object to `true`.

The cache is persistent and will be cleared on a least-recently-used basis once the preferred size is exceeded. Furthermore, the system can clear the cache due to low storage availability, so it's not advisable to depend on the cache to store critical data.

The cache functions offline. If a portion or the entirety of a video is cached, it can be played from the cache even when the device is offline until the cached data is exhausted.

> Due to platform limitations, the cache cannot be used with HLS video sources on iOS. Caching DRM-protected videos is not supported on Android and iOS.

### Managing the cache

- The preferred cache size in bytes can be defined using the [`setVideoCacheSizeAsync`](#videosetvideocachesizeasyncsizebytes) function. The default cache size is 1GB.
- The [`getCurrentVideoCacheSize`](#videogetcurrentvideocachesize) can be used to get the current storage occupied by the cache in bytes.
- All cached videos can be cleared using the [`clearVideoCacheAsync`](#videoclearvideocacheasync) function.

### Intercepting native asset loading

<Collapsible summary={<>This is a native <CODE>expo-video</CODE> feature meant for advanced users. Expand to learn more.</>}>
#### Introduction

`expo-video` includes a native extension point on iOS called `VideoAssetTransportProvider`. It allows you to intercept specific video sources, customize how the underlying `AVURLAsset` is created, and override how it loads data.

This is useful when a source cannot be handled by `AVKit` directly and needs native preprocessing. For example, a provider can rewrite a URL, attach a custom `AVAssetResourceLoaderDelegate`, start a local proxy server, or transform one streaming format into another before playback begins.

Providers are registered in the `VideoAssetTransportRegistry` at module startup. When `expo-video` loads a source, it creates a `VideoAssetSourceDescriptor` and asks registered providers, in priority order, whether they want to handle it. The first provider that returns a `VideoAssetLoadPlan` is used.

This API is intended for advanced native integrations. It requires a custom native module, so it is not available in Expo Go. Use a development build instead.

#### Customizable properties

The main customization points are the fields on `VideoAssetTransportProvider` and the fields on the `VideoAssetLoadPlan` it returns.

`VideoAssetTransportProvider` lets you control the following properties:

| Property             | Description                                                                                                                 |
| -------------------- | --------------------------------------------------------------------------------------------------------------------------- |
| `identifier`         | A stable name for the provider. It is used when replacing or unregistering a provider.                                      |
| `priority`           | Which provider wins if multiple providers match the same source. Higher values take precedence.                             |
| `makeLoadPlan(for:)` | The matching and configuration entry point. Return `nil` to ignore a source, or return a `VideoAssetLoadPlan` to handle it. |

`VideoAssetLoadPlan` lets you control how `expo-video` constructs and manages the asset via the following properties:

| Property                  | Description                                                                                                                                                                                             |
| ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `assetURL`                | The URL used to initialize the underlying `AVURLAsset`. This can be the original source URL or a transport-specific replacement such as a rewritten scheme, local proxy URL, or generated playlist URL. |
| `assetOptions`            | Optional `AVURLAsset` initialization options. Use this to override the default options that `expo-video` would normally derive from the source.                                                         |
| `reportedContentTypeHint` | An optional content type that describes the effective playback format of `assetURL`. Set this when the transport changes the source type, such as translating DASH into HLS.                            |
| `resourceLoaderDelegate`  | An optional `AVAssetResourceLoaderDelegate` that should be attached to the asset's resource loader.                                                                                                     |
| `resourceLoaderQueue`     | Optional dispatch queue on which `resourceLoaderDelegate` should receive callbacks.                                                                                                                     |
| `prepareAsset`            | Optional async work to run before `expo-video` eagerly loads asset properties. Use this for transport bootstrap such as fetching manifests or starting a local server.                                  |
| `retainedObjects`         | Optional array of helper objects that must stay alive for the lifetime of the asset, such as local HTTP servers, parsers, or transport state owners.                                                    |
| `attachErrorHandler`      | An optional hook that lets the transport forward asynchronous errors back into `expo-video` after the load plan has been applied.                                                                       |
| `onAssetDeinit`           | Optional cleanup to run when the `VideoAsset` is deallocated.                                                                                                                                           |

#### Implementation and usage

A typical setup looks as follows:

1. Create an Expo module with [`create-expo-module`](/modules/get-started/).
2. Add a class that conforms to `VideoAssetTransportProvider`.
3. Register the provider in the module's `OnCreate` block.
4. Build the app so the native module is compiled into your project.

If you only need the provider in a single app, use the [local Expo module](/modules/get-started/#add-a-new-module-to-an-existing-application) flow.

If you want to reuse the provider across multiple apps, use the [standalone Expo module](/modules/get-started/#create-a-new-module-with-an-example-project) flow instead.

#### Basic usage example

1. Define the provider and load plan. After creating the module, add a class that conforms to `VideoAssetTransportProvider`. In `makeLoadPlan(for:)`, inspect the `VideoAssetSourceDescriptor` and return `nil` for sources you do not want to handle.

```swift
import ExpoVideo

final class ExampleVideoTransportProvider: VideoAssetTransportProvider {
  static let providerIdentifier = "com.example.video-transport"

  let identifier = Self.providerIdentifier
  let priority = 500

  func makeLoadPlan(for source: VideoAssetSourceDescriptor) -> VideoAssetLoadPlan? {
    guard source.contentTypeHint == .dash, source.url.pathExtension == "mpd" else {
      return nil
    }

    let transformedURL = URL(string: "http://127.0.0.1:8080/master.m3u8")!

    return VideoAssetLoadPlan(
      assetURL: transformedURL,
      reportedContentTypeHint: .hls
    )
  }
}
```

2. To register the provider, the recommended place to register a provider is an Expo module's `OnCreate` block. This ensures the provider is available before videos start loading.

```swift
import ExpoModulesCore
import ExpoVideo

public final class CustomVideoTransportModule: Module {
  public func definition() -> ModuleDefinition {
    Name("CustomVideoTransport")

    OnCreate {
      VideoAssetTransportRegistry.registerProvider(ExampleVideoTransportProvider())
    }

    OnDestroy {
      VideoAssetTransportRegistry.unregisterProvider(
        withId: ExampleVideoTransportProvider.providerIdentifier
      )
    }
  }
}
```

#### Complete examples

You can use the following complete examples for a better grasp of how to use this API.

- [Basic DASH support provider](https://github.com/expo/expo/tree/main/apps/bare-expo/modules/expo-video-dash-support-module) - a local module in Bare Expo that provides limited DASH support for `expo-video` on iOS.
- [`expo-video` iOS caching](https://github.com/expo/expo/blob/main/packages/expo-video/ios/Cache/CacheVideoAssetTransportProvider.swift) - the built-in cache provider implementation.

</Collapsible>

## API

```js
import { VideoView, useVideoPlayer } from 'expo-video';
```

<APISection packageName="expo-video" apiName="Video" />
